# MathMethodsProject

./: .gitignore  CMakeLists.txt  insampleconstructiontest2.cpp  main.m  readme.md
include/: BackTestEngine.hpp  Bar.hpp  Constants.hpp  DataReader.hpp  DateEncoder.hpp  ParallelTimeWindowEngine.hpp  ParallelTimeWindowEngineFromReading.hpp  Strategy.hpp  TimeWindowEngine.hpp  constants.hpp  utils.hpp
optimization/: optimization.py  optimization_viz.ipynb
output/: results.csv
resources/: HO MatLab Test.xlsx  HO Optimization.xlsx  TF Data.xls  main.m
resources_/: 2024.02.25 Main (1).ipynb  2024.02.25 Main.ipynb  equity curve & heatmap.ipynb  ezread.m  main.m  plots_insample_outsample.ipynb
src/: insampleconstructiontest.cpp  insampleconstructiontest2.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  memmaptest.cpp  servectest.cpp
